--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -1,4 +1,10 @@
-#root {
+body {
+  margin: 0px;
+  background-color: black;
+}
+
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -40,3 +46,4 @@
 .read-the-docs {
   color: #888;
 }
+*/
