--- a/FrontEnd/src/styles/home.module.css
+++ b/FrontEnd/src/styles/home.module.css
@@ -29,9 +29,9 @@
    transition: color 0.5s ease;
  }
  
- .link:hover {
+ /*.link:hover {
    color: purple;
- }
+ }*/
  
  .loginCtn {
    display: flex;
@@ -45,9 +45,9 @@
    margin-top: 10px;
  }
  
- .linkLogin:hover, .linkSignup:hover {
+ /*.linkLogin:hover, .linkSignup:hover {
    color: purple;
- }
+ }*/
  
  .mainText {
    color: white;
@@ -60,9 +60,9 @@
    transition: color 0.3s ease;
  }
  
- .link:hover {
+ /*.link:hover {
    color: purple;
- }
+ }*/
  
  .page {
    display: flex;
@@ -86,9 +86,9 @@
    margin-top: 0px;
  }
  
- .linkLogin:hover, .linkSignup:hover {
+ /*.linkLogin:hover, .linkSignup:hover {
    color: purple;
- }
+ }*/
  
  .orText {
    margin: 0 5px; 
