--- a/FrontEnd/src/styles/gallery.module.css
+++ b/FrontEnd/src/styles/gallery.module.css
@@ -1,34 +1,29 @@
-/*.ulGallery {
-    display: flex;
-    align-items: center;
-    font-size: 10px;
-    color :white;
 
-    }
+body{
+    margin: 0px;
+    background-color: black;
+} 
 
-    
-.ulGallery li{
-list-style: none;
-    }*/
 
-.wrapper {
-    display: grid;
- /* grid-template-columns: 50px 50px 50px 50px;*/
- /*grid-template-columns: auto;*/
-      /*  grid: repeat(3, 80px) / auto-flow;
-      grid-template-columns: auto auto auto;
-      grid-template-rows: auto auto auto; */
-      grid-template-columns: fit-content(100%) fit-content(100%) 1fr;
-     /* grid-template-rows: fit-content(100%) fit-content(100%) 1fr;*/
-    column-gap: 10px;
-     row-gap: 15px;
-     box-sizing: border-box;
-     height: 200px;
-  width: 100%;
  
-      }
 
-.grid  {
-   /* grid-area: 1 / col4-start / last-line / 6;*/
-       justify-self: center;
-      }
+ .container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    grid-template-areas:
+      "image1 image1 image1 image1"
+      "text text text text";
+  }
+  
+  .image1 {
+    grid-area: image1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
