--- a/FrontEnd/src/styles/gallery.module.css
+++ b/FrontEnd/src/styles/gallery.module.css
@@ -1,29 +1,35 @@
 
 body{
-    margin: 0px;
     background-color: black;
 } 
 
 
- 
-
  .container {
+    margin-top:1000px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
     grid-template-areas:
       "image1 image1 image1 image1"
       "text text text text";
+      
   }
   
   .image1 {
     grid-area: image1;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
     object-fit: cover;
+    
   }
   
   img {
     max-width: 100%;
     height: auto;
+  }
+
+  .link {
+    color: aqua;
+    cursor: pointer;
+    transition: color 0.5s ease;
   }
