--- a/FrontEnd/src/styles/gallery.module.css
+++ b/FrontEnd/src/styles/gallery.module.css
@@ -1,35 +1,138 @@
 
 body{
+    margin: 20px;
+    padding: 0;
+    text-align: center;
     background-color: black;
 } 
 
 
  .container {
-    margin-top:1000px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-    grid-template-areas:
-      "image1 image1 image1 image1"
-      "text text text text";
-      
-  }
-  
-  .image1 {
-    grid-area: image1;
-    width: auto;
-    height: auto;
-    object-fit: cover;
-    
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
+   grid-template-columns: repeat(4, 1fr);
+   grid-auto-rows: 100px 300px;
+   grid-gap: 10px;
+    grid-auto-flow: auto;
   }
 
-  .link {
-    color: aqua;
-    cursor: pointer;
-    transition: color 0.5s ease;
+  .art{
+width: 100%;
+height: 100%;
+position: relative;
   }
+  
+  .art .item {
+
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  
+  .art .item img{
+
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+     object-position: 50% 50%;
+     cursor: pointer;
+     transition: .5s ease-in-out;
+   }
+
+
+.art:hover .item img{
+    transform: scale(1.5);
+}
+
+.art .text{
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+    font-size: 25px;
+    pointer-events: none;
+    z-index:4;
+    transition: .3s ease-in-out;
+    -webkit-backdrop-filter: blur(5px) saturate(1.8);
+    backdrop-filter: blur(5px) saturate(1.8);
+
+
+
+
+}
+
+.art:hover .text{
+    opacity:1;
+    animation: move-down .3s linear;
+    padding: 1em;
+    width: 100%;
+
+}
+
+.w-1{
+    grid-column: span 1;
+}
+
+.w-2{
+    grid-column: span 2;
+}
+.w-3{
+    grid-column: span 3;
+}
+.w-4{
+    grid-column: span 4;
+}
+.w-5{
+    grid-column: span 5;
+}
+.w-6{
+    grid-column: span 6;
+}
+
+.h-1{
+    grid-row: span 1;
+}
+
+.h-2{
+    grid-row: span 2;
+}
+.h-3{
+    grid-row: span 3;
+}
+.h-4{
+    grid-row: span 4;
+}
+.h-5{
+    grid-row: span 5;
+}
+.h-6{
+    grid-row: span 6;
+}
+
+
+
+
+
+@media screen and (max-width: 1000px){
+.container {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+}
+
+
+
+
+@keyframes move-down {
+    0%{
+        top:10%
+    }
+    50%{
+        top:35%
+    }
+    100%{
+        top:50%
+    }
+}
+
