--- a/FrontEnd/src/styles/add.module.css
+++ b/FrontEnd/src/styles/add.module.css
@@ -1,23 +1,30 @@
-.mainCtn{
+
+
+
+.formCtn{
 display: flex;
 flex-direction: column;
 gap: 10px;
 
 }
 
+.mainCtn h1{
+color:aliceblue;
 
-.mainCtn input {
+}
 
-    width: 150px;
+
+.formCtn input {
+    width: 250px;
+    height: 25px;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
     }
 
-    .mainCtn button {
+    .formCtn button {
     margin-top: 20px;
      width: 150px;
       padding: 0;
-      margin: 0;
       box-sizing: border-box;
         }
