--- a/FrontEnd/src/styles/add.module.css
+++ b/FrontEnd/src/styles/add.module.css
@@ -15,16 +15,22 @@ color:aliceblue;
 
 
 .formCtn input {
-    width: 250px;
-    height: 25px;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-    }
+    width: 500px;
+    height: 30px;
+    padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+   
+}
 
-    .formCtn button {
-    margin-top: 20px;
-     width: 150px;
-      padding: 0;
+.formCtn button {
+      background-color: aqua;  
+      font-size: 16px;
+      margin-top: 20px;
+      margin-left: 170px;
+      width: 150px;
+      padding: 10px;
       box-sizing: border-box;
-        }
+      border-radius: 50px;
+      cursor: pointer;
+}
