--- a/FrontEnd/src/styles/login.module.css
+++ b/FrontEnd/src/styles/login.module.css
@@ -107,3 +107,11 @@ font-size: 18px;
     cursor: pointer;
 }
 
+.connexion{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    gap: 20px;
+}
+
