--- a/FrontEnd/src/styles/artdetails.module.css
+++ b/FrontEnd/src/styles/artdetails.module.css
@@ -7,7 +7,7 @@
 
 .textCtn {
     color: aqua;
-    
+    width: 500px;
   }
 
   .textCtn > p {
@@ -17,14 +17,17 @@
     align-items: center;
     flex-wrap: nowrap;
     gap: 10px;
+
   }
 
   
 
   
   .editInput {
-
-    width: 500px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
     height: 30px;
     padding: 0;
    margin: 0;
