--- a/FrontEnd/src/styles/add.module.css
+++ b/FrontEnd/src/styles/add.module.css
@@ -1,6 +1,3 @@
-
-
-
 .formCtn{
 display: flex;
 flex-direction: column;
@@ -25,11 +22,12 @@ color:aliceblue;
 
 .formCtn button {
       background-color: aqua;  
+      border: none;
       font-size: 16px;
       margin-top: 20px;
       margin-left: 170px;
       width: 150px;
-      padding: 10px;
+      padding: 6px 8px;
       border-radius: 50px;
       cursor: pointer;
 }
