--- a/FrontEnd/src/styles/login.module.css
+++ b/FrontEnd/src/styles/login.module.css
@@ -5,7 +5,7 @@ margin: auto;
 background-color: white;
 padding-bottom: 30px;
 width: 500px;
-height: 550px;
+height: 580px;
 }
 
 .header{
@@ -34,7 +34,7 @@ border-radius: 9px;
 margin-top: 55px;
 display: flex;
 flex-direction: column;
-gap:25px;
+/*gap:25px;*/
 }
 
 .input{
