--- a/FrontEnd/src/styles/userprofile.module.css
+++ b/FrontEnd/src/styles/userprofile.module.css
@@ -1,3 +1,25 @@
-.text{
-    color: white;
-}
+
+.artHub{
+    font-size:84px;
+    display: flex;
+    justify-content:center;
+    letter-spacing: 20px;
+    border-bottom: 2px solid white;
+    }
+   
+
+    .text{
+        color: white;
+    }
+    
+    .link {
+        color: aqua;
+        cursor: pointer;
+        transition: color 0.5s ease;
+      }
+
+      .mainText {
+        color: white;
+        margin-bottom: 0;
+      }
+      
