Log in form CSS update

--- a/FrontEnd/src/styles/userprofile.module.css
+++ b/FrontEnd/src/styles/userprofile.module.css
@@ -1,11 +1,11 @@
 
-.artHub{
+/*.artHub{
     font-size:84px;
     display: flex;
     justify-content:center;
     letter-spacing: 20px;
     border-bottom: 2px solid white;
-    }
+    }*/
    
 
     .text{
