--- a/FrontEnd/src/styles/login.module.css
+++ b/FrontEnd/src/styles/login.module.css
@@ -2,10 +2,12 @@
 display: flex;
 flex-direction: column;
 margin: auto;
-background-color: white;
+border: 1px solid aqua;
+border-radius: 30px;
 padding-bottom: 30px;
 width: 500px;
 height: 580px;
+color: aliceblue;
 }
 
 .header{
@@ -18,16 +20,9 @@ height: 580px;
 }
 
 .text{
-color: black;
+color:aliceblue;
 font-size: 48px;
 font-weight: 700;
-}
-
-.underline{
-width: 61px;
-height: 6px;
-background-color: black;
-border-radius: 9px;
 }
 
 .inputs{
@@ -41,15 +36,15 @@ display: flex;
 align-items: center;
 margin: auto;
 width: 400px;
-height: 50px;
-background-color: #eaeaea;
+height: 40px;
+border: 1px solid gray;
 border-radius: 6px;
 }
 
-
 .input img{
     margin: 0px 30px;
-    height: 30px ;
+    height: 20px; 
+    filter: invert(70%) ;
 }
 
 .input input{
@@ -58,14 +53,14 @@ border-radius: 6px;
     background-color: transparent;
     border: none;
     outline: none;
-    color: #797979;
-    font-size: 19px;
+    font-size: 15px;
 }
 
 .submitCtn{
     display: flex;
     gap: 30px;
     margin: 60px auto;   
+    width: 250px;
 }
 
 .submit{
@@ -73,46 +68,30 @@ display: flex;
 justify-content: center;
 align-items: center;
 width: 220px;
-color: white;
+color:aqua;
 background-color: black;
 border-radius: 50px;
-font-size: 19px;
+font-size: 15px;
 font-weight: 700;
 cursor: pointer;
-
 }
 
 .submitGray{
-    display: flex;
+display: flex;
 justify-content: center;
 align-items: center;
 width: 220px;
-color: white;
 background-color: black;
 border-radius: 50px;
-font-size: 19px;
+font-size: 15px;
 font-weight: 700;
 cursor: pointer;
-    background-color: #eaeaea;
-    color: #676767;
 }
 
-.forgotPassword{
-margin-top: 27px;
-color:#797979;
-font-size: 18px;
+.connectionCtn{
+    border-radius: 20px;
+    border: none;
+    width: 200px;
+    height: 30px;
+    background-color: aqua;
 }
-
-.forgotPassword span{
-    color: black;
-    cursor: pointer;
-}
-
-.connexion{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    gap: 20px;
-}
-
