--- a/FrontEnd/src/styles/home.module.css
+++ b/FrontEnd/src/styles/home.module.css
@@ -86,4 +86,36 @@
   text-decoration: none;
  }
  
- 
+
+@media (max-width: 768px) { 
+  .page {
+    max-width: 100%;
+    margin: 0;
+    padding: 10px;
+  }
+
+  .mainText {
+    font-size: 14px; 
+    width: 100%;
+    padding: 10px;
+  }
+
+  .artHub {
+    font-size: 48px; 
+    letter-spacing: 5px; 
+    border-bottom: 1px solid white; 
+  }
+
+  .loginCtn {
+    flex-direction: column; 
+  }
+
+  .link, .linkLogin, .linkSignup {
+    font-size: 12px; 
+  }
+
+  .orText {
+    font-size: 12px; 
+  }
+}
+
