--- a/FrontEnd/src/styles/artdetails.module.css
+++ b/FrontEnd/src/styles/artdetails.module.css
@@ -83,3 +83,46 @@
     height: 350px;
     object-fit: cover; 
   }
+
+
+ 
+@media (max-width: 768px) { 
+  .mainCtn {
+    flex-direction: column; 
+    align-items: center; 
+    gap: 10px; 
+  }
+
+  .imageContainer {
+    width: 100%; 
+    padding: 0 10px; 
+  }
+
+  .imageContainer img {
+    max-width: 100%;
+    height: auto; 
+    object-fit: contain;
+  }
+
+  .textCtn {
+    width: 100%; 
+    padding: 0 10px; 
+  }
+
+  .buttonCtn {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 5px; 
+  }
+
+  .buttonCtn button {
+    width: auto;
+    margin-top: 10px; 
+  }
+
+  .editInput {
+    width: calc(100% - 20px); 
+  }
+}
+
+
